--- a/Contact.html
+++ b/Contact.html
@@ -6,5 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Contact Us</title>
   </head>
-  <body></body>
+  <body>
+    <main></main>
+  </body>
 </html>
