--- a/Index.html
+++ b/Index.html
@@ -6,5 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Home</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      MAIN
+    </main>
+  </body>
 </html>
