--- a/Contact.html
+++ b/Contact.html
@@ -8,6 +8,12 @@
     <title>Contact Us</title>
   </head>
   <body>
-    <main></main>
+    <main>
+      <div class="top">TOP</div>
+      <nav>NAV</nav>
+      <div class="mail-us">MAIL US</div>
+      <div class="visit">VISIT US</div>
+      <footer>FOOTER</footer>
+    </main>
   </body>
 </html>
