--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,13 @@
   <body>
     <main>
       MAIN
+      <div class="top">TOP</div>
+      <nav>NAV</nav>
+      <div class="joinus">
+        JOIN US
+      </div>
+      <div class="how-it-works">HOW IT WORKS</div>
+      <footer>FOOTER</footer>
     </main>
   </body>
 </html>
