--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,30 @@
       <nav>NAV</nav>
       <div class="joinus">
         JOIN US
+        <div class="join">
+          <h1 class="financial">Your personal financial safety net online.</h1>
+          <button>Join Now</button>
+        </div>
+        <div class="us">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum
+            fuga nobis unde itaque excepturi sapiente, eveniet facilis
+            blanditiis vel cum tempora natus illum ipsa corporis temporibus
+            incidunt mollitia. Unde, vel?
+          </p>
+        </div>
+        <div class="pic1">Pic1</div>
+        <div class="pic2">Pic2</div>
+        <div class="pic3">Pic3</div>
+        <div class="text">
+          <h1 class="about-us">About Us</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+            neque nihil accusamus dicta molestiae distinctio veritatis minima,
+            ab consectetur qui rerum et debitis perferendis excepturi deleniti
+            voluptatibus temporibus modi. Labore.
+          </p>
+        </div>
       </div>
       <div class="how-it-works">HOW IT WORKS</div>
       <footer>FOOTER</footer>
