--- a/Contact.html
+++ b/Contact.html
@@ -8,6 +8,19 @@
     <title>Contact Us</title>
   </head>
   <body>
-    <main></main>
+    <main>
+      <div class="page2container">
+        <h1>Oh hello there!</h1>
+        <img src="images/child.png" alt="child" />
+      </div>
+      <nav class="page2nav">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Our offer</a></li>
+          <li><a href="#">Why us</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </main>
   </body>
 </html>
