--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,37 @@
   </head>
   <body>
     <main>
-      MAIN
+      <header class="container">
+        <div class="part1">
+          <h1>We've got you Covered.</h1>
+          <p>
+            Together we keep other safe at home or at work. By paying a tiny fee
+            at day, you are fully insured all day long. You get it all for as
+            little as
+            <strong>$0.4 per pay.</strong>
+          </p>
+          <button>JOIN NOW</button>
+          <img src="images/family.png" alt="family" />
+        </div>
+        <div class="part2">
+          <div class="part2-1">
+            <h2>Learn more</h2>
+            <h5>What do we hava to offer?</h5>
+          </div>
+          <div class="part2-2">
+            <h2>Join today</h2>
+            <h5>What are you waiting for?</h5>
+          </div>
+        </div>
+      </header>
+      <nav class="topnav">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Our offer</a></li>
+          <li><a href="#">Why us</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
     </main>
   </body>
 </html>
