--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,49 @@
   </head>
   <body>
     <main>
-      MAIN
+      <div class="bottom">
+        <div class="box-1">
+          <p class="how">How</p>
+          <p class="works">It works?</p>
+        </div>
+        <div class="box-2">
+          <aside>01</aside>
+          <p class="second">Answer a few questions about yourself?</p>
+        </div>
+        <div class="box-3">
+          <aside>02</aside>
+          <p class="third">Choose a plan.</p>
+          <p class="quote">Get a quote.</p>
+        </div>
+        <div class="box-4">
+          <aside>03</aside>
+          <p class="fourth">
+            Answer some questions about your medical history.
+          </p>
+        </div>
+        <div class="box-5">
+          <aside class="four">04</aside>
+          <p class="fifth">Wait 90 secs to get approved.</p>
+        </div>
+        <div class="box-6">
+          <aside>05</aside>
+          <p class="sixth">Done!</p>
+        </div>
+
+        <footer>
+          <svg class="icon icon-chevron-thin-up">
+            <use xlink:href="#icon-chevron-thin-up"></use>
+            <symbol id="icon-chevron-thin-up" viewBox="0 0 20 20">
+              <title>chevron-thin-up</title>
+              <path
+                d="M2.582 13.891c-0.272 0.268-0.709 0.268-0.979 0s-0.271-0.701 0-0.969l7.908-7.83c0.27-0.268 0.707-0.268 0.979 0l7.908 7.83c0.27 0.268 0.27 0.701 0 0.969s-0.709 0.268-0.978 0l-7.42-7.141-7.418 7.141z"
+              ></path>
+            </symbol>
+          </svg>
+          <a href="images/family.png">Take me up again!</a>
+        </footer>
+        <div class="empty"></div>
+      </div>
     </main>
   </body>
 </html>
