--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
           <p class="sixth">Done!</p>
         </div>
 
-        <footer>
+        <footer class="bottom">
           <svg class="icon icon-chevron-thin-up">
             <use xlink:href="#icon-chevron-thin-up"></use>
             <symbol id="icon-chevron-thin-up" viewBox="0 0 20 20">
