--- a/Index.html
+++ b/Index.html
@@ -26,9 +26,24 @@
             incidunt mollitia. Unde, vel?
           </p>
         </div>
-        <div class="pic1">Pic1</div>
-        <div class="pic2">Pic2</div>
-        <div class="pic3">Pic3</div>
+        <div class="pic">
+          <div class="customer">
+            <div class="intro">
+              <div class="image">
+                <img
+                  class="fit-picture"
+                  src="images/child.png"
+                  style="width: 90%; height: 90%;"
+                  alt="Child"
+                />
+              </div>
+            </div>
+            <div class="intro"></div>
+            <div class="intro"></div>
+          </div>
+          <div class="up"></div>
+          <div class="down"></div>
+        </div>
         <div class="text">
           <h1 class="about-us">About Us</h1>
           <p>
