--- a/Contact.html
+++ b/Contact.html
@@ -15,10 +15,10 @@
       </div>
       <nav class="page2nav">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="Index.html">Home</a></li>
           <li><a href="#">Our offer</a></li>
           <li><a href="#">Why us</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="top">TOP</div>
