--- a/Index.html
+++ b/Index.html
@@ -34,10 +34,10 @@
       </header>
       <nav class="topnav">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="Index.html">Home</a></li>
           <li><a href="#">Our offer</a></li>
           <li><a href="#">Why us</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Contact.html">Contact</a></li>
         </ul>
       </nav>
       MAIN
