--- a/Index.html
+++ b/Index.html
@@ -34,17 +34,13 @@
       </header>
       <nav class="topnav">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Our offer</a></li>
-          <li><a href="#">Why us</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a class="home" href="#">Home</a></li>
+          <li><a class="home" href="#">Our offer</a></li>
+          <li><a class="home" href="#">Why us</a></li>
+          <li><a class="home" href="#">Contact</a></li>
         </ul>
       </nav>
-      MAIN
-      <div class="top">TOP</div>
-      <nav>NAV</nav>
       <div class="joinus">
-        JOIN US
         <div class="join">
           <h1 class="financial">Your personal financial safety net online.</h1>
           <button>Join Now</button>
@@ -61,12 +57,14 @@
           <div class="customer">
             <div class="intro">
               <div class="image">
-                <img
-                  class="fit-picture"
-                  src="images/child.png"
-                  style="width: 90%; height: 90%;"
-                  alt="Child"
-                />
+                <img class="child" src="images/child.png" alt="child" />
+                <h1>Children</h1>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+                  ipsam illum doloribus ab dolorum, aperiam expedita doloremque
+                  error mollitia dolore rem aliquam recusandae itaque beatae
+                  totam, corrupti, vel exercitationem delectus.
+                </p>
               </div>
             </div>
             <div class="intro"></div>
@@ -85,7 +83,49 @@
           </p>
         </div>
       </div>
-      <div class="how-it-works">HOW IT WORKS</div>
+      <!-- Sharon -->
+      <div class="bottom">
+        <div class="box-1">
+          <p class="how">How</p>
+          <p class="works">It works?</p>
+        </div>
+        <div class="box-2">
+          <aside>01</aside>
+          <p class="second">Answer a few questions about yourself?</p>
+        </div>
+        <div class="box-3">
+          <aside>02</aside>
+          <p class="third">Choose a plan.</p>
+          <p class="quote">Get a quote.</p>
+        </div>
+        <div class="box-4">
+          <aside>03</aside>
+          <p class="fourth">
+            Answer some questions about your medical history.
+          </p>
+        </div>
+        <div class="box-5">
+          <aside class="four">04</aside>
+          <p class="fifth">Wait 90 secs to get approved.</p>
+        </div>
+        <div class="box-6">
+          <aside>05</aside>
+          <p class="sixth">Done!</p>
+        </div>
+        <div class="end">
+          <svg class="icon icon-chevron-thin-up">
+            <use xlink:href="#icon-chevron-thin-up"></use>
+            <symbol id="icon-chevron-thin-up" viewBox="0 0 20 20">
+              <title>chevron-thin-up</title>
+              <path
+                d="M2.582 13.891c-0.272 0.268-0.709 0.268-0.979 0s-0.271-0.701 0-0.969l7.908-7.83c0.27-0.268 0.707-0.268 0.979 0l7.908 7.83c0.27 0.268 0.27 0.701 0 0.969s-0.709 0.268-0.978 0l-7.42-7.141-7.418 7.141z"
+              ></path>
+            </symbol>
+          </svg>
+          <a class="top" href="images/family.png">Take me up again!</a>
+        </div>
+        <div class="empty"></div>
+      </div>
       <footer>FOOTER</footer>
     </main>
   </body>
