--- a/Contact.html
+++ b/Contact.html
@@ -9,27 +9,54 @@
   </head>
   <body>
     <main>
+      <!--Lijuan-->
       <div class="page2container">
         <h1>Oh hello there!</h1>
         <img src="images/child.png" alt="child" />
       </div>
       <nav class="page2nav">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Our offer</a></li>
-          <li><a href="#">Why us</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a class="home" href="#">Home</a></li>
+          <li><a class="home" href="#">Our offer</a></li>
+          <li><a class="home" href="#">Why us</a></li>
+          <li><a class="home" href="#">Contact</a></li>
         </ul>
       </nav>
-      <div class="top">TOP</div>
-      <nav>NAV</nav>
-      <div class="mail-us">MAIL US</div>
-      <div class="visit">
+      <!--Sharon-->
+      <div class="middle">
+          <div class="mind">
+            <h1 class="mind">Whats on your mind?</h1>
+          </div>
+          <div class="form">
+            <form action="">
+              <label
+                >Your email<br />
+                <input type="email" name="email" maxlength="30" />
+              </label>
+              <br />
+              <label
+                >Your message<br />
+                <textarea
+                  id="comments"
+                  placeholder="Dear Insurance company...."
+                ></textarea>
+                <br />
+              </form>
+              
+  <div class="send">
+              <button>SEND MESSAGE</button>   
+            </div>      
+          </div>
+        </div>
+
+      <!--Cindy-->
+
+      <div class="mail-us"></div>
+      <div class="visit-here">
         <div class="come-visit">
           <h1 class="visit-us">Come and Visit us</h1>
           <p>We are here.</p>
         </div>
-        VISIT US
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2030.6367442693825!2d17.945627515991895!3d59.405772811933225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9eed21e68093%3A0x4fa1f7e391a24167!2sJENSEN%20komvux%20Kista!5e0!3m2!1sen!2sse!4v1568467011122!5m2!1sen!2sse"
           width="100%"
