--- a/Contact.html
+++ b/Contact.html
@@ -42,10 +42,10 @@
                 ></textarea>
                 <br />
               </form>
-              
+
   <div class="send">
-              <button>SEND MESSAGE</button>   
-            </div>      
+              <button>SEND MESSAGE</button>
+            </div>
           </div>
         </div>
 
@@ -65,33 +65,8 @@
           style="border:0;"
           allowfullscreen=""
         ></iframe>
-      <div class="middle">
-        <div class="mind">
-          <h1>Whats on your mind?</h1>
-        </div>
-        <div class="form">
-          <form action="">
-            <label
-              >Your email<br />
-              <input type="email" name="email" maxlength="30" />
-            </label>
-            <br />
-            <label
-              >Your message<br />
-              <textarea
-                id="comments"
-                placeholder="Dear Insurance company...."
-              ></textarea>
-              <br />
-            </form>
-            
-<div class="send">
-            <button>SEND MESSAGE</button>   
-          </div>      
-        </div>
       </div>
+      <footer>FOOTER</footer>
     </main>
   </body>
 </html>
-
-
