--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <main>
       <header class="container">
         <div class="part1">
-          <h1>We've got you Covered.</h1>
+          <h1 id="now">We've got you Covered.</h1>
           <p>
             Together we keep other safe at home or at work. By paying a tiny fee
             at day, you are fully insured all day long. You get it all for as
@@ -122,7 +122,7 @@
               ></path>
             </symbol>
           </svg>
-          <a class="top" href="images/family.png">Take me up again!</a>
+          <a class="top" href="#now">Take me up again!</a>
         </div>
         <div class="empty"></div>
       </div>
